# moonjuice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-test-release.yaml
cmake/: RegisterPublicPackage.cmake
ide-integrations/example-project/: README.md  example-script.mj
ide-integrations/moonjuice-jetbrains/: .gitignore  build.gradle.kts  settings.gradle.kts
ide-integrations/moonjuice-jetbrains/.run/: Run IDE with Plugin.run.xml
ide-integrations/moonjuice-jetbrains/src/main/kotlin/dev/tasbox/moonjuice/: MoonJuiceBundle.kt  MoonJuiceFileType.kt  MoonJuiceIcons.kt  MoonJuiceLanguage.kt  MoonJuiceLspServerDescriptor.kt  MoonJuiceLspServerSupportProvider.kt  MyMessageBundle.kt  MyToolWindow.kt
ide-integrations/moonjuice-jetbrains/src/main/kotlin/dev/tasbox/moonjuice/language/: MoonJuiceFileType.kt  MoonJuiceLanguage.kt
ide-integrations/moonjuice-jetbrains/src/main/resources/messages/: MoonJuiceBundle.properties
ide-integrations/moonjuice-vscode/: .vscodeignore  CHANGELOG.md  README.md  biome.json  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
ide-integrations/moonjuice-vscode/src/: extension.ts
ide-integrations/moonjuice-vscode/src/test/: extension.test.ts
tests/: CMakeLists.txt
vcpkg-triplets/: x64-linux-clang-releaseonly.cmake  x64-linux-clang.cmake  x64-windows-dynstatic-releaseonly.cmake  x64-windows-dynstatic.cmake
(+5 files in other folders)
